# tiny-agent-py

./: .coverage  .gitignore  .pkm  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  example.py  pyproject.toml  test_all.py
.claude/: settings.json
.claude/hooks/: stop
.claude/worktrees/llm-memory-layer-research/.omc/state/: idle-notif-cooldown.json
.context/: config.jsonc
.context/guides/: commit-guide.md  complete-guide.md  daily-note-guide.md  note-guide.md  quality-check.md  scope-review.md  search-guide.md
.context/templates/: adr.md  bug.md  context.md  decision.md  gotcha.md  index.md  insight.md  pattern.md  runbook.md  work-complete.txt
.github/workflows/: release.yml  test.yml
docs/: AGENTS.md  agent-memory-policy.md  builtin_tools.md  mcp-server.md  mcp.md  memory.md  skills.md  tools.md
docs/cli/: pkm-ask.md  pkm-config.md  pkm-consolidate.md  pkm-daemon.md  pkm-daily.md  pkm-data.md  pkm-hook.md  pkm-index.md  pkm-mcp.md  pkm-note.md  pkm-search.md  pkm-setup.md  pkm-stats.md  pkm-tags.md  pkm-update.md  pkm-vault.md
tests/: AGENTS.md  test_agent.py  test_all.py  test_builtin_tools.py  test_e2e.py  test_mcp_manager.py  test_memory.py  test_safety.py  test_skills.py  test_tools.py
tiny_agent/: AGENTS.md  agent.py  builtin_tools.py  mcp_manager.py  memory.py  safety.py  skills.py  tools.py
